tests/paczka1/small_fuzzy/79401040.err
Error in line 2: BExOOq2 A599 44,0
Error in line 4: O58fBjQQm A599 8,2
Error in line 1: hEnXfFRG1 A642 2,5
Error in line 10: hEnXfFRG1 A599 60,2
